Track sonifications/merged/ folder but not its contents

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,7 @@ outputs/
 # Ignore everything in sonifications except merged/
 sonifications/*
 !sonifications/merged/
-# (optional) If you want to ignore files inside merged/ too, add:
-# sonifications/merged/*
+sonifications/merged/*
 # (optional) If you want to keep a placeholder in merged/, add a .gitkeep file
 
 # VSCode and OS files
